# xdgmime

./: meson.build
subprojects/: clib.wrap
